force-app/main/default/objects/AssessmentTemplateQuestion__c/AssessmentTemplateQuestion__c.object-meta.xml
<CustomObject>
    <label>Assessment Template Question</label>
    <nameField>
        <displayFormat>TQ_{YYYYMMDD}_{000}</displayFormat>
        <label>Questions Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>