force-app/main/default/objects/AssessmentTemplateQuestion__c/fields/AssessmentQuestionId__c.field-meta.xml
<CustomField>
    <fullName>AssessmentQuestionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Question</label>
    <referenceTo>AssessmentQuestion__c</referenceTo>
    <relationshipLabel>Assessment Template Question</relationshipLabel>
    <relationshipName>Assessment_Template_Question</relationshipName>
    <type>Lookup</type>
</CustomField>