force-app/main/default/objects/AssessmentTemplateQuestion__c/fields/AssessmentTemplateGroup__c.field-meta.xml
<CustomField>
    <fullName>AssessmentTemplateGroup__c</fullName>
    <label>Assessment Template Section</label>
    <referenceTo>AssessmentTemplateSection__c</referenceTo>
    <relationshipLabel>Assessment Template Question</relationshipLabel>
    <relationshipName>Assessment_Template_Question</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>