force-app/main/default/objects/AssessmentTemplateQuestion__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Choosable</fullName>
            </value>
            <value>
                <fullName>Short Answer</fullName>
            </value>
            <value>
                <fullName>Multi Choosable</fullName>
            </value>
            <value>
                <fullName>Start Rating</fullName>
            </value>
            <value>
                <fullName>Number Point</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>